--- a/my-sudoku-prolog-java/pom.xml
+++ b/my-sudoku-prolog-java/pom.xml
@@ -37,9 +37,9 @@
   <dependencies>
     <!-- Dependencia JPL para integración con Prolog -->
     <dependency>
-      <groupId>org.swi-prolog</groupId>
-      <artifactId>jpl</artifactId>
-      <version>${jpl.version}</version>
+        <groupId>org.swi-prolog</groupId>
+        <artifactId>jpl</artifactId>
+        <version>9.1.24</version>
     </dependency>
     
     <!-- Dependencias de JUnit para testing -->
